tests/invalid/coerce_int.err_exp
coerce_int.m:020: In clause for function `ok'/1:
coerce_int.m:020:   warning: type conversion of [38;5;87m`X'[39;49m from `coerce_int.wrap(int)'
coerce_int.m:020:   to the same type is [38;5;203mredundant.[39;49m
coerce_int.m:026: In clause for `bad(in(coerce_int.wrap(bound(1 ; 2)))) =
coerce_int.m:026:   out(coerce_int.wrap(bound(1 ; 3)))':
coerce_int.m:026:   mode error: the function result had the wrong
coerce_int.m:026:   instantiatedness.
coerce_int.m:026:   Final instantiatedness of [38;5;87m`HeadVar__2'[39;49m was
coerce_int.m:026:   [38;5;203m`bound(wrap(bound(1 ; 2)))',[39;49m
coerce_int.m:026:   expected final instantiatedness was
coerce_int.m:026:     [38;5;40mnamed inst wrap([39;49m
coerce_int.m:026:       [38;5;40mbound([39;49m
coerce_int.m:026:         [38;5;40m1[39;49m
coerce_int.m:026:       [38;5;40m;[39;49m
coerce_int.m:026:         [38;5;40m3[39;49m
coerce_int.m:026:       [38;5;40m)[39;49m
coerce_int.m:026:     [38;5;40m)[39;49m
coerce_int.m:026:     [38;5;40mwhich expands to[39;49m
coerce_int.m:026:       [38;5;40mbound([39;49m
coerce_int.m:026:         [38;5;40mwrap([39;49m
coerce_int.m:026:           [38;5;40mbound([39;49m
coerce_int.m:026:             [38;5;40m1[39;49m
coerce_int.m:026:           [38;5;40m;[39;49m
coerce_int.m:026:             [38;5;40m3[39;49m
coerce_int.m:026:           [38;5;40m)[39;49m
coerce_int.m:026:         [38;5;40m)[39;49m
coerce_int.m:026:       [38;5;40m).[39;49m
coerce_int.m:026: In clause for function `bad'/1:
coerce_int.m:026:   warning: type conversion of [38;5;87m`X'[39;49m from `coerce_int.wrap(int)'
coerce_int.m:026:   to the same type is [38;5;203mredundant.[39;49m
coerce_int.m:032: In clause for `bad_wrong_type(in(coerce_int.wrap(bound(1 ; 2
coerce_int.m:032:   ; 42u)))) = out(coerce_int.wrap(bound(1 ; 2)))':
coerce_int.m:032:   in coerce expression:
coerce_int.m:032:   mode error: in the coerced term:
coerce_int.m:032:   in the argument of function symbol `wrap'/1:
coerce_int.m:032:   cannot convert the [38;5;87mcoerced subterm[39;49m from type `uint' to
coerce_int.m:032:   `uint' because the following function symbols in the input
coerce_int.m:032:   term's instantiatedness are [38;5;203mnot part of the input type:[39;49m
coerce_int.m:032:     [38;5;203m1,[39;49m
coerce_int.m:032:     [38;5;203m2.[39;49m
coerce_int.m:032: In clause for function `bad_wrong_type'/1:
coerce_int.m:032:   warning: type conversion of [38;5;87m`X'[39;49m from
coerce_int.m:032:   `coerce_int.wrap(uint)' to the same type is [38;5;203mredundant.[39;49m
